@@ -3,12 +3,13 @@ package com.Hospital.Management.System.security;
 import com.Hospital.Management.System.doclogin.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import com.Hospital.Management.System.doclogin.entity.User;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -25,7 +26,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 userEntity.getUsername(),
                 userEntity.getPassword(),
-                Collections.emptyList()
+                List.of(new SimpleGrantedAuthority(userEntity.getUserType()))
         );
     }
 }
